<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/one"
        android:layout_width="67dp"
        android:layout_height="78dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="372dp"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access" />

    <Button
        android:id="@+id/two"
        android:layout_width="67dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="372dp"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/access" />

    <TextView
        android:id="@+id/access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="652dp"
        android:text="@string/access"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three"
        android:layout_width="67dp"
        android:layout_height="78dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="268dp"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/four"
        android:layout_width="67dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="268dp"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/submit"
        android:layout_width="139dp"
        android:layout_height="66dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="117dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three" />
</android.support.constraint.ConstraintLayout>